--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,27 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <groupId>mattern.william</groupId>
     <artifactId>Project1Calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
+
+
 </project>
+
