--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
             <version>4.12</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <groupId>mozeik.gerrod</groupId>
     <artifactId>CalculatorProject</artifactId>
     <version>1.0-SNAPSHOT</version>
