--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zipcodewilmington</groupId>
-    <artifactId>scientific_calculator</artifactId>
+    <groupId>com.zcw.calculator</groupId>
+    <artifactId>scientific-calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
+
 </project>
+
