--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,11 @@
         </dependency>
     </dependencies>
 
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+        <version>3.5</version>
+    </dependency>
+
 
 </project>
